<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/mainLoginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/circle_cue_logo" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/personalRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal" />

                <RadioButton
                    android:id="@+id/businessRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/business" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/upon_signup_an_unique_password_is_emailed_to_change_it_later"
                android:textSize="13sp" />


<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:id="@+id/profileImageRegistration"-->
<!--                android:layout_width="96dp"-->
<!--                android:layout_height="96dp"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginTop="15dp"-->
<!--                android:src="@drawable/profile_picture_placeholder"-->
<!--                app:civ_border_width="0dp" />-->




            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/registrationEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email_address"
                android:drawableStart="@drawable/mail_icon"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />





            <EditText
                android:id="@+id/registrationPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/enter_phone_number_visible_on_profile"
                android:inputType="phone"
                android:textSize="15sp" />


            <Button
                android:id="@+id/socialMediaAccountButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_button_login"
                android:text="@string/add_social_media_accounts"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/addSocialMediaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationFacebookEditText"
                        android:hint="@string/facebook_username"
                        android:drawableStart="@drawable/facebook"
                        android:drawablePadding="15dp"/>

                    <CheckBox
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationFacebookCheckbox"
                        android:text="@string/private_string"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationInstagramEditText"
                        android:hint="@string/instagram_username"
                        android:drawableStart="@drawable/insta"
                        android:drawablePadding="15dp"/>

                    <CheckBox
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationInstagramCheckbox"
                        android:text="@string/private_string"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationLinkedInEditText"
                        android:hint="@string/linkedin_username"
                        android:drawableStart="@drawable/linkedin"
                        android:drawablePadding="15dp"/>

                    <CheckBox
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationLinkedInCheckbox"
                        android:text="@string/private_string"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationTwitterEditText"
                        android:hint="@string/twitter_username"
                        android:drawableStart="@drawable/twitter"
                        android:drawablePadding="15dp"/>

                    <CheckBox
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationTwitterCheckbox"
                        android:text="@string/private_string"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:background="@color/white">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationWebsiteEditText"
                        android:hint="@string/enter_website"
                        android:drawableStart="@drawable/browse"
                        android:drawablePadding="15dp"/>

                    <CheckBox
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/registrationWebsiteCheckbox"
                        android:text="@string/private_string"/>


                </LinearLayout>

            </LinearLayout>



            <CheckBox
                android:id="@+id/tnCCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15sp"
                android:text="@string/term_and_condition"
                android:layout_marginEnd="20dp"
                android:linksClickable="true"
                android:autoLink="all"/>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button_login"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="0dp"
            android:text="@string/copyright_2019_circlecue_inc_patented_usa_and_international"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/aboutUsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/faqsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/faqs"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/showcaseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/showcase"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>